Разметка портфолио и подключение normalize

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/normalize.css">
   </head>
 
   <body>
@@ -18,7 +20,7 @@
             <a href=" "> Студия </a>
           </li>
           <li>
-            <a href=" "> Портфолио </a>
+            <a href="portfolio.html"> Портфолио </a>
           </li>
           <li>
             <a href=" "> Контакты </a>
@@ -192,6 +194,7 @@
         </li>
       </ul>
       <!--Постоянные клиенты-->
+      <section>
       <h2>Постоянные клиенты</h2>
       <ul>
         <li>
