--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web Studio</title>
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="stylesheet" href="./CSS/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -16,33 +17,33 @@
           <img src="./images/header/WebStudio.png" alt="webstudio" />
         </a>
         <ul>
-          <li>
-            <a href=" "> Студия </a>
+          <li class="nav-link-item">
+            <a class="nav-link" href="index.html"> Студия </a>
           </li>
-          <li>
-            <a href="portfolio.html"> Портфолио </a>
+          <li class="nav-link-item">
+            <a class="nav-link" href="portfolio.html"> Портфолио </a>
           </li>
-          <li>
-            <a href=" "> Контакты </a>
+          <li class="nav-link-item">
+            <a class="nav-link" href=" "> Контакты </a>
           </li>
         </ul>
 
         <ul>
-          <li>
-            <img src="./images/header/Vector.svg" alt="позвонить" />
-            <a href="tel: ">+38 096 111 11 11</a>
+          <li class="contact-list-item">
+            <img class="contact-data" src="./images/header/Vector.svg" alt="позвонить" />
+            <a class="contact-data" href="tel: ">+38 096 111 11 11</a>
           </li>
-          <li>
-            <img src="./images/header/envelope.svg" alt="написать" />
-            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <li class="contact-list-item">
+            <img class="contact-data" src="./images/header/envelope.svg" alt="написать" />
+            <a  class="contact-data" href="mailto:info@devstudio.com"> info@devstudio.com</a>
           </li>
         </ul>
       </nav>
     </header>
     <!--Герой-->
     <section>
-      <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <button>Заказать услугу</button>
+      <h1 class="hero"> ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <type=<button class="button"> Заказать услугу </button>
     </section>
     <!--Почему мы-->
     <section>
@@ -245,11 +246,11 @@
           </a>
         </address>
         <ul>
-          <li>
-            <a href="tel: ">+38 096 111 11 11</a>
+          <li class="contact-list-item">
+            <a class="contact-data" href="tel: ">+38 096 111 11 11</a>
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <li class="contact-list-item">
+            <a  class="contact-data" href="mailto:info@devstudio.com"> info@devstudio.com</a>
           </li>
         </ul>
       </div>
