--- a/portfolio.html
+++ b/portfolio.html
@@ -4,39 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-        <link rel="stylesheet" href="./CSS/styles.css">
-        <link rel="stylesheet" href="./CSS/normalize.css">
+<link rel="stylesheet" href="./CSS/styles.css">
+<link rel="stylesheet" href="./CSS/normalize.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <!--Шапка сайта-->
     <header>
-      <nav>
-        <a href="index.html" aria-label="лого">
-          <img src="./images/header/WebStudio.png" alt="webstudio" />
-        </a>
-        <ul>
-          <li>
-            <a href="index.html"> Студия </a>
-          </li>
-          <li>
-            <a href=" "> Портфолио </a>
-          </li>
-          <li>
-            <a href=" "> Контакты </a>
-          </li>
-        </ul>
-
-        <ul>
-          <li>
-            <img src="./images/header/Vector.svg" alt="позвонить" />
-            <a href="tel: ">+38 096 111 11 11</a>
-          </li>
-          <li>
-            <img src="./images/header/envelope.svg" alt="написать" />
-            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+            <a href="index.html" aria-label="лого">
+                <img src="./images/header/WebStudio.png" alt="webstudio" />
+            </a>
+            <ul>
+                <li class="nav-link-item">
+                    <a class="nav-link" href="index.html"> Студия </a>
+                </li>
+                <li class="nav-link-item">
+                    <a class="nav-link" href="portfolio.html"> Портфолио </a>
+                </li>
+                <li class="nav-link-item">
+                    <a class="nav-link" href=" "> Контакты </a>
+                </li>
+            </ul>
+    
+            <ul>
+                <li class="contact-list-item">
+                    <img class="contact-data" src="./images/header/Vector.svg" alt="позвонить" />
+                    <a class="contact-data" href="tel: ">+38 096 111 11 11</a>
+                </li>
+                <li class="contact-list-item">
+                    <img class="contact-data" src="./images/header/envelope.svg" alt="написать" />
+                    <a class="contact-data" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <!--Products-navigation-->
