--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
-    <link rel="stylesheet" href="./CSS/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/normalize.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -30,20 +33,30 @@
 
         <ul>
           <li class="contact-list-item">
-            <img class="contact-data" src="./images/header/Vector.svg" alt="позвонить" />
+            <img
+              class="contact-data"
+              src="./images/header/Vector.svg"
+              alt="позвонить"
+            />
             <a class="contact-data" href="tel: ">+38 096 111 11 11</a>
           </li>
           <li class="contact-list-item">
-            <img class="contact-data" src="./images/header/envelope.svg" alt="написать" />
-            <a  class="contact-data" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            <img
+              class="contact-data"
+              src="./images/header/envelope.svg"
+              alt="написать"
+            />
+            <a class="contact-data" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
           </li>
         </ul>
       </nav>
     </header>
     <!--Герой-->
     <section>
-      <h1 class="hero"> ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <type=<button class="button"> Заказать услугу </button>
+      <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <button class="button">Заказать услугу</button>
     </section>
     <!--Почему мы-->
     <section>
@@ -194,8 +207,9 @@
           </ul>
         </li>
       </ul>
-      <!--Постоянные клиенты-->
-      <section>
+    </section>
+    <!--Постоянные клиенты-->
+    <section>
       <h2>Постоянные клиенты</h2>
       <ul>
         <li>
@@ -250,7 +264,9 @@
             <a class="contact-data" href="tel: ">+38 096 111 11 11</a>
           </li>
           <li class="contact-list-item">
-            <a  class="contact-data" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            <a class="contact-data" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
           </li>
         </ul>
       </div>
