--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </header>
     <!--Герой-->
     <section>
-      <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <button class="button">Заказать услугу</button>
+      <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <type="button" class="button">Заказать услугу</button>
     </section>
     <!--Почему мы-->
     <section>
