--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!--Герой-->
     <section>
       <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <type="button" class="button">Заказать услугу</button>
+      <button type="button" class="button">Заказать услугу</button>
     </section>
     <!--Почему мы-->
     <section>
