--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <!--Герой-->
     <section>
-      <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <h1 class="hero-heading">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
       <button type="button" class="button">Заказать услугу</button>
     </section>
     <!--Почему мы-->
