--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <ul>
         <li>
           <img src="./images/about/antenna.svg" alt="антенна" />
-          <h3><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
+          <h3 class="sub-heading"><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
           <p>
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
@@ -72,7 +72,7 @@
         </li>
         <li>
           <img src="./images/about/clock.svg" alt="часы" />
-          <h3><b>ПУНКТУАЛЬНОСТЬ</b></h3>
+          <h3 class="sub-heading"><b>ПУНКТУАЛЬНОСТЬ</b></h3>
           <p>
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
@@ -81,7 +81,7 @@
 
         <li>
           <img src="./images/about/diagram.svg" alt="диаграмма" />
-          <h3><b>ПЛАНИРОВАНИЕ</b></h3>
+          <h3 class="sub-heading"><b>ПЛАНИРОВАНИЕ</b></h3>
           <p>
             Равным образом консультация с широким активом в значительной степени
             обуславливает.
@@ -90,7 +90,7 @@
 
         <li>
           <img src="./images/about/Group.svg" alt="группа" />
-          <h3><b>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</b></h3>
+          <h3 class="sub-heading"><b>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</b></h3>
           <p>
             Значимость этих проблем настолько очевидна, что реализация плановых
             заданий.
