--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./CSS/styles.css" />
-    <link rel="stylesheet" href="./CSS/normalize.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/normalize.css" />
   </head>
 
   <body>
@@ -62,36 +62,44 @@
     <section>
       <h2 hidden>Почему мы</h2>
       <ul>
-        <li>
-          <img src="./images/about/antenna.svg" alt="антенна" />
+        <li class="about-img">
+          <img
+            class="about-img"
+            src="./images/about/antenna.svg"
+            alt="антенна"
+          />
           <h3 class="sub-heading"><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
-          <p>
+          <p class="abt-text">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
-        <li>
-          <img src="./images/about/clock.svg" alt="часы" />
+        <li class="about-img">
+          <img class="about-img" src="./images/about/clock.svg" alt="часы" />
           <h3 class="sub-heading"><b>ПУНКТУАЛЬНОСТЬ</b></h3>
-          <p>
+          <p class="abt-text">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
           </p>
         </li>
 
-        <li>
-          <img src="./images/about/diagram.svg" alt="диаграмма" />
+        <li class="about-img">
+          <img
+            class="about-img"
+            src="./images/about/diagram.svg"
+            alt="диаграмма"
+          />
           <h3 class="sub-heading"><b>ПЛАНИРОВАНИЕ</b></h3>
-          <p>
+          <p class="abt-text">
             Равным образом консультация с широким активом в значительной степени
             обуславливает.
           </p>
         </li>
 
         <li>
-          <img src="./images/about/Group.svg" alt="группа" />
+          <img class="about-img" src="./images/about/Group.svg" alt="группа" />
           <h3 class="sub-heading"><b>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</b></h3>
-          <p>
+          <p class="abt-text">
             Значимость этих проблем настолько очевидна, что реализация плановых
             заданий.
           </p>
@@ -100,9 +108,9 @@
     </section>
     <!--Чем мы занимаемся-->
     <section>
-      <h2>Чем мы занимаемся</h2>
+      <h2 class="activity-header">Чем мы занимаемся</h2>
       <ul>
-        <li>
+        <li class="activity-item">
           <img
             src="images/ourbusiness/desktop.jpg"
             alt="ноутбук"
@@ -112,7 +120,7 @@
           <h3>Десктопные приложения</h3>
         </li>
 
-        <li>
+        <li class="activity-item">
           <img
             src="images/ourbusiness/mobile.jpg"
             alt="Телефон"
@@ -121,7 +129,7 @@
           />
           <h3>Мобильные приложения</h3>
         </li>
-        <li>
+        <li class="activity-item">
           <img
             src="images/ourbusiness/design.jpg"
             alt="компьютер"
