--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             width="370"
             height="294"
           />
-          <h3>Десктопные приложения</h3>
+          <h3 style="activity-subheader">Десктопные приложения</h3>
         </li>
 
         <li class="activity-item">
@@ -127,7 +127,7 @@
             width="370"
             height="294"
           />
-          <h3>Мобильные приложения</h3>
+          <h3 style="activity-subheader">Мобильные приложения</h3>
         </li>
         <li class="activity-item">
           <img
@@ -136,13 +136,13 @@
             width="370"
             height="294"
           />
-          <h3>Дизайнерские решения</h3>
+          <h3 style="activity-subheader">Дизайнерские решения</h3>
         </li>
       </ul>
     </section>
     <!--Наша команда-->
     <section>
-      <h2>Наша команда</h2>
+      <h2 class="team-section-name">Наша команда</h2>
       <ul>
         <li>
           <img
@@ -151,8 +151,8 @@
             width="270"
             height="260"
           />
-          <h4>Николай Кучеренко</h4>
-          <p lang="en">Product Designer</p>
+          <h4 class="team-subheader">Николай Кучеренко</h4>
+          <p class="profession" lang="en">Product Designer</p>
           <ul>
             <li><a href=" " aria-label="Instagram"> </a></li>
             <li><a href=" " aria-label="Facebook"> </a></li>
@@ -169,8 +169,8 @@
             width="270"
             height="260"
           />
-          <h4>Ольга Иванова</h4>
-          <p lang="en">Frontend Developer</p>
+          <h4 class="team-subheader">Ольга Иванова</h4>
+          <p class="profession" lang="en">Frontend Developer</p>
           <ul>
             <li><a href=" " aria-label="Instagram"> </a></li>
             <li><a href=" " aria-label="Facebook"> </a></li>
@@ -186,8 +186,8 @@
             width="270"
             height="260"
           />
-          <h4>Андрей Шевченко</h4>
-          <p lang="en">Marketing</p>
+          <h4 class="team-subheader">Андрей Шевченко</h4>
+          <p class="profession" lang="en">Marketing</p>
           <ul>
             <li><a href=" " aria-label="Instagram"> </a></li>
             <li><a href=" " aria-label="Facebook"> </a></li>
@@ -204,8 +204,8 @@
             width="270"
             height="260"
           />
-          <h4>Иван Николаев</h4>
-          <p lang="en">UI Designer</p>
+          <h4 class="team-subheader">Иван Николаев</h4>
+          <p class="profession" lang="en">UI Designer</p>
           <ul>
             <li><a href=" " aria-label="Instagram"> </a></li>
             <li><a href=" " aria-label="Facebook"> </a></li>
@@ -218,7 +218,7 @@
     </section>
     <!--Постоянные клиенты-->
     <section>
-      <h2>Постоянные клиенты</h2>
+      <h2 class="clients-header">Постоянные клиенты</h2>
       <ul>
         <li>
           <a href="" aria-label="Клиент1">
