--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
     <!--Почему мы-->
     <section>
       <h2 hidden>Почему мы</h2>
-      <ul>
-        <li class="about-img">
-          <img
-            class="about-img"
-            src="./images/about/antenna.svg"
+      <ul class="about-img>
+        <li>
+          <img src="./images/about/antenna.svg"
             alt="антенна"
           />
           <h3 class="sub-heading"><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
