--- a/index.html
+++ b/index.html
@@ -59,21 +59,20 @@
       <button type="button" class="button">Заказать услугу</button>
     </section>
     <!--Почему мы-->
-    <section>
+    <section style="about-us-section">
       <h2 hidden>Почему мы</h2>
       <ul class="about-img>
-        <li>
+        <li style="about-image-icon">
           <img src="./images/about/antenna.svg"
-            alt="антенна"
-          />
+            alt="антенна"/>
           <h3 class="sub-heading"><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
           <p class="abt-text">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
-        <li class="about-img">
-          <img class="about-img" src="./images/about/clock.svg" alt="часы" />
+        <li style="about-image-icon" >
+          <img src="./images/about/clock.svg" alt="часы" />
           <h3 class="sub-heading"><b>ПУНКТУАЛЬНОСТЬ</b></h3>
           <p class="abt-text">
             Задача организации, в особенности же рамки и место обучения кадров
@@ -81,10 +80,8 @@
           </p>
         </li>
 
-        <li class="about-img">
-          <img
-            class="about-img"
-            src="./images/about/diagram.svg"
+        <li style="about-image-icon">
+          <img src="./images/about/diagram.svg"
             alt="диаграмма"
           />
           <h3 class="sub-heading"><b>ПЛАНИРОВАНИЕ</b></h3>
@@ -94,8 +91,8 @@
           </p>
         </li>
 
-        <li>
-          <img class="about-img" src="./images/about/Group.svg" alt="группа" />
+        <li style="about-image-icon">
+          <img src="./images/about/Group.svg" alt="группа" />
           <h3 class="sub-heading"><b>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</b></h3>
           <p class="abt-text">
             Значимость этих проблем настолько очевидна, что реализация плановых
@@ -107,41 +104,41 @@
     <!--Чем мы занимаемся-->
     <section>
       <h2 class="activity-header">Чем мы занимаемся</h2>
-      <ul>
-        <li class="activity-item">
+      <ul class="activity-list">
+        <li class="activity-list-item">
           <img
             src="images/ourbusiness/desktop.jpg"
             alt="ноутбук"
             width="370"
             height="294"
           />
-          <h3 style="activity-subheader">Десктопные приложения</h3>
+          <h3 style="activity-subh-r">Десктопные приложения</h3>
         </li>
 
-        <li class="activity-item">
+        <li class="activity-list-item">
           <img
             src="images/ourbusiness/mobile.jpg"
             alt="Телефон"
             width="370"
             height="294"
           />
-          <h3 style="activity-subheader">Мобильные приложения</h3>
+          <h3 style="activity-subh-r">Мобильные приложения</h3>
         </li>
-        <li class="activity-item">
+        <li class="activity-list-item">
           <img
             src="images/ourbusiness/design.jpg"
             alt="компьютер"
             width="370"
             height="294"
           />
-          <h3 style="activity-subheader">Дизайнерские решения</h3>
+          <h3 style="activity-subh-r">Дизайнерские решения</h3>
         </li>
       </ul>
     </section>
     <!--Наша команда-->
-    <section>
+    <section class="team-section">
       <h2 class="team-section-name">Наша команда</h2>
-      <ul>
+      <ul class="team-list">
         <li>
           <img
             src="/images/team/Николай.jpg"
@@ -152,11 +149,11 @@
           <h4 class="team-subheader">Николай Кучеренко</h4>
           <p class="profession" lang="en">Product Designer</p>
           <ul>
-            <li><a href=" " aria-label="Instagram"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Twitter"> </a></li>
-            <li><a href=" " aria-label="Linkedin"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Linkedin"> </a></li>
           </ul>
         </li>
 
@@ -170,11 +167,11 @@
           <h4 class="team-subheader">Ольга Иванова</h4>
           <p class="profession" lang="en">Frontend Developer</p>
           <ul>
-            <li><a href=" " aria-label="Instagram"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Twitter"> </a></li>
-            <li><a href=" " aria-label="Linkedin"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Linkedin"> </a></li>
           </ul>
         </li>
         <li>
@@ -187,11 +184,11 @@
           <h4 class="team-subheader">Андрей Шевченко</h4>
           <p class="profession" lang="en">Marketing</p>
           <ul>
-            <li><a href=" " aria-label="Instagram"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Twitter"> </a></li>
-            <li><a href=" " aria-label="Linkedin"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Linkedin"> </a></li>
           </ul>
         </li>
 
@@ -205,45 +202,45 @@
           <h4 class="team-subheader">Иван Николаев</h4>
           <p class="profession" lang="en">UI Designer</p>
           <ul>
-            <li><a href=" " aria-label="Instagram"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Facebook"> </a></li>
-            <li><a href=" " aria-label="Twitter"> </a></li>
-            <li><a href=" " aria-label="Linkedin"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
+            <li class="social-link"><a href=" " aria-label="Linkedin"> </a></li>
           </ul>
         </li>
       </ul>
     </section>
     <!--Постоянные клиенты-->
-    <section>
+    <section class="clients-section">
       <h2 class="clients-header">Постоянные клиенты</h2>
-      <ul>
-        <li>
+      <ul class="clients-list">
+        <li class="client-icon">
           <a href="" aria-label="Клиент1">
             <img src="./images/clients/Client1.svg" alt="Клиент1"
           /></a>
         </li>
-        <li>
+        <li class="client-icon">
           <a href="" aria-label="Клиент2">
             <img src="./images/clients/Client2.svg" alt="Клиент2" />
           </a>
         </li>
-        <li>
+        <li class="client-icon">
           <a href="" aria-label="Клиент1">
             <img src="./images/clients/Client3.svg" alt="Клиент3"
           /></a>
         </li>
-        <li>
+        <li class="client-icon">
           <a href="" aria-label="Клиент4">
             <img src="./images/clients/Client4.svg" alt="Клиент4"
           /></a>
         </li>
-        <li>
+        <li class="client-icon">
           <a href="" aria-label="Клиент5">
             <img src="./images/clients/Client5.svg" alt="Клиент5"
           /></a>
         </li>
-        <li>
+        <li class="client-icon">
           <a href="" aria-label="Клиент6">
             <img src="./images/clients/Client6.svg" alt="Клиент6"
           /></a>
@@ -279,17 +276,17 @@
 
       <div>
         <p>Присоединяйтесь</p>
-        <ul>
-          <li>
+        <ul class="joinus">
+          <li class="social-link">
             <a href="" aria-label="иконка_инстаграм"> </a>
           </li>
-          <li>
+          <li class="social-link">
             <a href="" aria-label="иконка_инстаграм"> </a>
           </li>
-          <li>
+          <li class="social-link">
             <a href="" aria-label="иконка_инстаграм"> </a>
           </li>
-          <li>
+          <li class="social-link">
             <a href="" aria-label="иконка_инстаграм"> </a>
           </li>
         </ul>
