--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <button type="button" class="button">Заказать услугу</button>
     </section>
     <!--Почему мы-->
-    <section style="about-us-section">
+    <section class="about-us-section">
       <h2 hidden>Почему мы</h2>
       <ul class="about-img>
-        <li style="about-image-icon">
+        <li class="about-image-icon">
           <img src="./images/about/antenna.svg"
             alt="антенна"/>
           <h3 class="sub-heading"><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
@@ -71,7 +71,7 @@
             формированию позиции.
           </p>
         </li>
-        <li style="about-image-icon" >
+        <li class="about-image-icon" >
           <img src="./images/about/clock.svg" alt="часы" />
           <h3 class="sub-heading"><b>ПУНКТУАЛЬНОСТЬ</b></h3>
           <p class="abt-text">
@@ -80,7 +80,7 @@
           </p>
         </li>
 
-        <li style="about-image-icon">
+        <li class="about-image-icon">
           <img src="./images/about/diagram.svg"
             alt="диаграмма"
           />
@@ -91,7 +91,7 @@
           </p>
         </li>
 
-        <li style="about-image-icon">
+        <li class="about-image-icon">
           <img src="./images/about/Group.svg" alt="группа" />
           <h3 class="sub-heading"><b>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</b></h3>
           <p class="abt-text">
@@ -112,7 +112,7 @@
             width="370"
             height="294"
           />
-          <h3 style="activity-subh-r">Десктопные приложения</h3>
+          <h3 class="activity-subh-r">Десктопные приложения</h3>
         </li>
 
         <li class="activity-list-item">
@@ -122,7 +122,7 @@
             width="370"
             height="294"
           />
-          <h3 style="activity-subh-r">Мобильные приложения</h3>
+          <h3 class="activity-subh-r">Мобильные приложения</h3>
         </li>
         <li class="activity-list-item">
           <img
@@ -131,7 +131,7 @@
             width="370"
             height="294"
           />
-          <h3 style="activity-subh-r">Дизайнерские решения</h3>
+          <h3 class="activity-subh-r">Дизайнерские решения</h3>
         </li>
       </ul>
     </section>
