--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
     <!--Почему мы-->
     <section class="about-us-section">
       <h2 hidden>Почему мы</h2>
-      <ul class="about-img>
+      <ul class="about-img">
         <li class="about-image-icon">
-          <img src="./images/about/antenna.svg"
-            alt="антенна"/>
+          <img src="./images/about/antenna.svg" alt="антенна" />
           <h3 class="sub-heading"><b>ВНИМАНИЕ К ДЕТАЛЯМ</b></h3>
           <p class="abt-text">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
-        <li class="about-image-icon" >
+        <li class="about-image-icon">
           <img src="./images/about/clock.svg" alt="часы" />
           <h3 class="sub-heading"><b>ПУНКТУАЛЬНОСТЬ</b></h3>
           <p class="abt-text">
@@ -81,9 +80,7 @@
         </li>
 
         <li class="about-image-icon">
-          <img src="./images/about/diagram.svg"
-            alt="диаграмма"
-          />
+          <img src="./images/about/diagram.svg" alt="диаграмма" />
           <h3 class="sub-heading"><b>ПЛАНИРОВАНИЕ</b></h3>
           <p class="abt-text">
             Равным образом консультация с широким активом в значительной степени
@@ -149,7 +146,9 @@
           <h4 class="team-subheader">Николай Кучеренко</h4>
           <p class="profession" lang="en">Product Designer</p>
           <ul>
-            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link">
+              <a href=" " aria-label="Instagram"> </a>
+            </li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
@@ -167,7 +166,9 @@
           <h4 class="team-subheader">Ольга Иванова</h4>
           <p class="profession" lang="en">Frontend Developer</p>
           <ul>
-            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link">
+              <a href=" " aria-label="Instagram"> </a>
+            </li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
@@ -184,7 +185,9 @@
           <h4 class="team-subheader">Андрей Шевченко</h4>
           <p class="profession" lang="en">Marketing</p>
           <ul>
-            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link">
+              <a href=" " aria-label="Instagram"> </a>
+            </li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
@@ -202,7 +205,9 @@
           <h4 class="team-subheader">Иван Николаев</h4>
           <p class="profession" lang="en">UI Designer</p>
           <ul>
-            <li class="social-link"><a href=" " aria-label="Instagram"> </a></li>
+            <li class="social-link">
+              <a href=" " aria-label="Instagram"> </a>
+            </li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Facebook"> </a></li>
             <li class="social-link"><a href=" " aria-label="Twitter"> </a></li>
