--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                 <a class="product-link" href=" " aria-label="Проект-6">
                     <img src="./images/projects/project6.png" alt="" проект6" width: 370px; height: 294px;>
                     <h2 class="product-header"><span lang="en">Inspiration has no Borders</span></h2>
-                    <p>Веб-сайт</p>
+                    <p class="product-subheader">Веб-сайт</p>
                 </a>
             </li>
             <li class="product-item">
