--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
         </a>
         <ul>
           <li class="nav-link-item">
-            <a class="nav-link" href="index.html"> Студия </a>
+            <a class="nav-link link current" href="index.html">
+              <p class="nav-link-text link current">Студия</p>
+            </a>
           </li>
           <li class="nav-link-item">
-            <a class="nav-link" href="portfolio.html"> Портфолио </a>
+            <a class="nav-link" href="portfolio.html">
+              <p class="nav-link-text">Портфолио</p></a
+            >
           </li>
           <li class="nav-link-item">
-            <a class="nav-link" href=" "> Контакты </a>
+            <a class="nav-link" href=" ">
+              <p class="nav-link-text">Контакты</p></a
+            >
           </li>
         </ul>
 
@@ -56,7 +62,9 @@
     <!--Герой-->
     <section>
       <h1 class="hero-heading">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <button type="button" class="button">Заказать услугу</button>
+      <button type="button" class="button">
+        <span class="hero-button-text">Заказать услугу</span>
+      </button>
     </section>
     <!--Почему мы-->
     <section class="about-us-section">
@@ -261,10 +269,13 @@
         </a>
       </div>
 
-      <div>
+      <div class="address-div">
         <address>
-          <a href="https://goo.gl/maps/PfShquKMq7pHnLQV8">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a
+            class="address-item-link"
+            href="https://goo.gl/maps/PfShquKMq7pHnLQV8"
+          >
+            <p class="address-item">г. Киев, пр-т Леси Украинки, 26</p>
           </a>
         </address>
         <ul>
