--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,19 @@
         </a>
         <ul>
           <li class="nav-link-item">
-            <a class="nav-link" href="index.html"> Студия </a>
+            <a class="nav-link" href="index.html">
+              <p class="nav-link-text">Студия</p>
+            </a>
           </li>
           <li class="nav-link-item">
-            <a class="nav-link" href="portfolio.html"> Портфолио </a>
+            <a class="nav-link link current" href="portfolio.html">
+              <p class="nav-link-text link current">Портфолио</p>
+            </a>
           </li>
           <li class="nav-link-item">
-            <a class="nav-link" href=" "> Контакты </a>
+            <a class="nav-link" href=" ">
+              <p class="nav-link-text">Контакты</p>
+            </a>
           </li>
         </ul>
 
@@ -161,6 +167,7 @@
         </li>
       </ul>
     </section>
+
     <!--Контакты-->
     <footer>
       <h2 hidden>Контакты</h2>
@@ -170,18 +177,23 @@
         </a>
       </div>
 
-      <div>
+      <div class="address-div">
         <address>
-          <a href="https://goo.gl/maps/PfShquKMq7pHnLQV8">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a
+            class="address-item-link"
+            href="https://goo.gl/maps/PfShquKMq7pHnLQV8"
+          >
+            <p class="address-item">г. Киев, пр-т Леси Украинки, 26</p>
           </a>
         </address>
         <ul>
-          <li>
-            <a href="tel: ">+38 096 111 11 11</a>
+          <li class="contact-list-item">
+            <a class="contact-data" href="tel: ">+38 096 111 11 11</a>
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <li class="contact-list-item">
+            <a class="contact-data" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
           </li>
         </ul>
       </div>
