--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <ul class="team-list">
         <li>
           <img
-            src="/images/team/Николай.jpg"
+            src="./images/team/Николай.jpg"
             alt="Николай"
             width="270"
             height="260"
